--- a/css/travel.css
+++ b/css/travel.css
@@ -1,3 +1,40 @@
+body {
+  min-width: 320px;
+  transition: 1s; }
 
+header {
+  background: url("../img/bg5.jpg") no-repeat center center;
+  background-size: cover;
+  background-blend-mode: darken;
+  transition: 3s; }
+  header h1 {
+    text-shadow: 1px 1px 0 white, -1px -1px 0 white, 0 0 25px white; }
+
+#Location img, #Restaurants img, #Events img {
+  width: 100%;
+  height: 70vw;
+  object-fit: cover; }
+
+@media screen and (min-width: 768px) {
+  #Location img, #Restaurants img, #Events img {
+    height: 35vw; }
+
+  header {
+    height: 20vw; } }
+@media screen and (min-width: 992px) {
+  #Location img, #Restaurants img, #Events img {
+    height: 22vw; } }
+@media screen and (min-width: 1200px) {
+  #Location img, #Restaurants img, #Events img {
+    height: 17.5vw; } }
+@media screen and (max-width: 576px) {
+  #nav-tab {
+    flex-direction: column; }
+    #nav-tab .nav-link {
+      border: none; }
+    #nav-tab p, #nav-tab h1 {
+      margin: 0; }
+    #nav-tab .active {
+      background: none; } }
 
 /*# sourceMappingURL=travel.css.map */
