--- a/css/travel.css
+++ b/css/travel.css
@@ -6,26 +6,29 @@ header {
   background: url("../img/bg5.jpg") no-repeat center center;
   background-size: cover;
   background-blend-mode: darken;
-  transition: 3s; }
+  transition: background 3s; }
   header h1 {
     text-shadow: 1px 1px 0 white, -1px -1px 0 white, 0 0 25px white; }
 
-#Location img, #Restaurants img, #Events img {
+.row {
+  margin: 0; }
+
+#Locations img, #Restaurants img, #Events img {
   width: 100%;
   height: 70vw;
   object-fit: cover; }
 
 @media screen and (min-width: 768px) {
-  #Location img, #Restaurants img, #Events img {
+  #Locations img, #Restaurants img, #Events img {
     height: 35vw; }
 
   header {
     height: 20vw; } }
 @media screen and (min-width: 992px) {
-  #Location img, #Restaurants img, #Events img {
+  #Locations img, #Restaurants img, #Events img {
     height: 22vw; } }
 @media screen and (min-width: 1200px) {
-  #Location img, #Restaurants img, #Events img {
+  #Locations img, #Restaurants img, #Events img {
     height: 17.5vw; } }
 @media screen and (max-width: 576px) {
   #nav-tab {
