--- a/css/travel.sass
+++ b/css/travel.sass
@@ -6,30 +6,31 @@ header
 	background: url("../img/bg5.jpg") no-repeat center center
 	background-size: cover
 	background-blend-mode: darken
-	transition: 3s
+	transition: background 3s
 	h1
 		text-shadow: 1px 1px 0 white, -1px -1px 0 white, 0 0 25px white
+.row
+	margin: 0
 
-
-#Location, #Restaurants, #Events
+#Locations, #Restaurants, #Events
 	img
 		width: 100%
 		height: 70vw
 		object-fit: cover
 
 @media screen and (min-width: 768px)
-	#Location, #Restaurants, #Events
+	#Locations, #Restaurants, #Events
 		img
 			height: 35vw
 	header
 		height: 20vw
 
 @media screen and (min-width: 992px)
-	#Location, #Restaurants, #Events
+	#Locations, #Restaurants, #Events
 		img
 			height: 22vw
 @media screen and (min-width: 1200px)
-	#Location, #Restaurants, #Events
+	#Locations, #Restaurants, #Events
 		img
 			height: 17.5vw
 
@@ -42,5 +43,6 @@ header
 			margin: 0
 		.active
 			background: none
+
 
  
